/*
 * StreamTeam
 * Copyright (C) 2019  University of Basel
 *
 * This program is free software: you can redistribute it and/or modify
 * it under the terms of the GNU Affero General Public License as
 * published by the Free Software Foundation, either version 3 of the
 * License, or (at your option) any later version.
 *
 * This program is distributed in the hope that it will be useful,
 * but WITHOUT ANY WARRANTY; without even the implied warranty of
 * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
 * GNU Affero General Public License for more details.
 *
 * You should have received a copy of the GNU Affero General Public License
 * along with this program.  If not, see <https://www.gnu.org/licenses/>.
 */

syntax = "proto3";

package streamTeam;

option java_package = "ch.unibas.dmi.dbis.streamTeam.dataStreamElements.protobuf";
option java_outer_classname = "InternalActiveKeysStreamElementPayloadProtos";

// Payload of an internalActiveKeys stream element (ATTENTION: ELEMENTS OF THIS DATA STREAM MUST BE USED ONLY IN THE INNER MODULE GRAPH OF A WORKER!!!)
message InternalActiveKeysStreamElementPayload {
    // empty by intention
}

// Object identifiers, group identifiers and positions in the content:
// all empty